# mediasoup-elixir

./: .credo.exs  .dialyzer_ignore.exs  .dockerignore  .gitignore  .tool-versions  CODEOWNERS  Cargo.toml  Dockerfile_dev  README.md  coveralls.json  docker-compose.yml  mix.exs
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: coverage.yml  release.yml  reviewdog.yml  rust-ci.yml  test.yml
config/: config.exs
lib/: consumer.ex  data_consumer.ex  data_producer.ex  logger_proxy.ex  mediasoup.ex  nif.ex  pipe_transport.ex  plain_transport.ex  process_wrap.ex  producer.ex  router.ex  scalability_modes.ex  transport.ex  transport_listen_info.ex  utility.ex  webrtc_server.ex  webrtc_transport.ex  worker.ex  wrap.ex
native/mediasoup_elixir/: .gitignore  Cargo.toml  Cross.toml  README.md
native/mediasoup_elixir/.cargo/: config
native/mediasoup_elixir/cross/: Dockerfile
native/mediasoup_elixir/local_deps/serde_rustler/serde_rustler/: Cargo.toml
native/mediasoup_elixir/local_deps/serde_rustler/serde_rustler/src/: de.rs  lib.rs  ser.rs
native/mediasoup_elixir/local_deps/serde_rustler/serde_rustler_tests/: mix.exs
native/mediasoup_elixir/local_deps/serde_rustler/serde_rustler_tests/native/serde_rustler_tests/: Cargo.toml
native/mediasoup_elixir/src/: atoms.rs  consumer.rs  data_consumer.rs  data_producer.rs  data_structure.rs  decoder.rs  encoder.rs  json_serde.rs  lib.rs  logger.rs  macros.rs  pipe_transport.rs  plain_transport.rs  producer.rs  resource.rs  router.rs  supported_rtp_capabilities.rs  task.rs  term_box.rs  webrtc_server.rs  webrtc_transport.rs  worker.rs
test/: cluster_test.exs  consumer_test.exs  data_consumer_test.exs  data_producer_test.exs  logger_proxy_test.exs  mediasoup_elixir_test.exs  mediasoup_test.exs  pipe_transport_test.exs  plain_transport_test.exs  process_wrap_test.exs  producer_test.exs  router_test.exs  scalability_modes_test.exs  smoke_test.exs  test_helper.exs  transport_listen_info_test.exs  transport_test.exs  utility_test.exs  webrtc_server_test.exs  webrtc_transport_test.exs  worker_test.exs  wrap_test.exs
test/data/: dtls-cert.pem  dtls-key.pem
test/integration/: test_consumer.ex  test_data_consumer.ex  test_data_producer.ex  test_pipe_transport.ex  test_plain_transport.ex  test_producer.ex  test_router.ex  test_smoke.ex  test_util.ex  test_worker.ex  (+3 more)
