[package]
name = "mediasoup_elixir"
version = "0.9.0"
authors = []
edition = "2021"

[lib]
name = "mediasoup_elixir"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = { version = "0.31.0", default-features = false, features = ["derive"] }
mediasoup = "0.16.0"
futures-lite = "2.2.0"
once_cell = "1.19.0"
num_cpus = "1.16.0"
async-executor = "1.5.1"
serde = { version = "1.0.197", features = ["derive"] }
serde-transcode = "1.1"
serde_json = "1.0"
serde_rustler = { path = "local_deps/serde_rustler/serde_rustler" }
env_logger = "0.11.3"

[features]
default = ["nif_version_2_15"]
nif_version_2_15 = ["rustler/nif_version_2_15"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
nif_version_2_17 = ["rustler/nif_version_2_17"]