[package]
name = "mediasoup_elixir"
version = "3.18.1"
authors = []
edition = "2021"

[lib]
name = "mediasoup_elixir"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = { version = "0.36.0", default-features = false, features = ["serde"] }
mediasoup =  "0.20.0"
futures-lite = "2.3.0"
once_cell = "1.19.0"
num_cpus = "1.16.0"
async-executor = "1.8.0"
serde = { version = "1.0.200", features = ["derive"] }
serde-transcode = "1.1"
serde_json = "1.0"
env_logger = "0.11.3"
log = { version = "0.4.21", features = ["std"] }


[features]
default = ["nif_version_2_15"]
nif_version_2_15 = ["rustler/nif_version_2_15"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
nif_version_2_17 = ["rustler/nif_version_2_17"]